<resources>
    <string name="app_name">Game Of Life</string>
    <string name="main_title">Game of Life</string>
    <string name="settings_label">Settings</string>
    <string name="new_game_label">New Game</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="about_text">The Game of Life, also known simply as Life, is a
<i>cellular automaton</i> devised by the British mathematician
John Horton Conway in 1970. It is the best-known example
of a cellular automaton.</string>
    <string name="grid_title">Game of Life Grid</string>
    <string name="settings_title">Game of Life Settings</string>
    <string name="settings_shortcut">s</string>
    <string name="reset_alert_title">Are you sure?</string>
    <string name="reset_alert_message">This will set the screen to Initial Pattern setting.</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="pref_game_rules">Game Rules</string>
    <string name="underpop_title">Underpopulate Number</string>
    <string name="underpop_summary">Any live cell with fewer than the \'Underpopulate Number\' of live neighbours dies, as if by under-population</string>
    <string name="overpop_title">Overpopulate Number</string>
    <string name="overpop_summary">Any live cell with more than the \'Overpopulate Number\' of live neighbours dies, as if by over-population</string>
    <string name="spawn_title">Spawn Number</string>
    <string name="spawn_summary">Any dead cell with \'Spawn Number\' of live neighbours becomes alive</string>
    <string name="pref_colors">Colors</string>
    <string name="init_pattern">Initial Pattern</string>
    <string name="init_pattern_summary">Many different types of patterns occur in the Game of Life, including still lifes, oscillators, and patterns that translate themselves across the board, including the glider, discovered by Richard K. Guy in 1970, and several kinds of spaceships. (Works only with default game rules.)</string>
    <string name="grid_size">Grid Size</string>
    <string name="grid_size_summary">Change the size of the grid.</string>
    <string name="grid_size_not_valid">Grid is cleared as Gosper Glider Gun is not supported in the current grid size. Select a larger grid from settings.</string>
    <string name="color_bg_summary">Change the background color of the grid.</string>
    <string name="color_bg_title">Background Color</string>
    <string name="color_cell_summary">Change the color of the cell.</string>
    <string name="color_cell_title">Cell Color</string>
</resources>