<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mydomain.gameoflife.activities.MainActivity">

    <Button
        android:text="@string/settings_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSettingsMain"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"/>

    <Button
        android:text="@string/new_game_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnNew"
        android:layout_alignBaseline="@+id/btnSettingsMain"
        android:layout_alignBottom="@+id/btnSettingsMain"
        android:layout_toLeftOf="@+id/btnSettingsMain"
        android:layout_toStartOf="@+id/btnSettingsMain"/>

    <Button
        android:text="@string/about_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAbout"
        android:layout_alignBaseline="@+id/btnSettingsMain"
        android:layout_alignBottom="@+id/btnSettingsMain"
        android:layout_toRightOf="@+id/btnSettingsMain"
        android:layout_toEndOf="@+id/btnSettingsMain"/>

    <TextView
        android:text="Game of Life"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:typeface="normal"
        android:fontFamily="sans-serif-condensed"
        android:textSize="32sp"
        android:textStyle="normal|bold"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/disp_logo"
        android:layout_marginTop="91dp"
        android:id="@+id/imageView"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
